--- a/notebooks/train-yolov12-object-detection-model.ipynb
+++ b/notebooks/train-yolov12-object-detection-model.ipynb
@@ -693,7 +693,7 @@
       "source": [
         "from ultralytics import YOLO\n",
         "model = YOLO ('/content/runs/detect/train/weights/best.pt')\n",
-        "results = model.predict(source = \"/content/Marble Racing - The Olympic Games!.mp4\", imgsz = 640, conf=0.25, save = True)"
+        "results = model.predict(source = \"/content/clip2.mp4\", imgsz = 640, conf=0.25, save = True)"
       ],
       "metadata": {
         "id": "7kMwO0Zf7yvm"
